Added the ability for the user to submit new time logs through the browser.

--- a/TimeLogging/TimeLogging/Views/Home/Index.cshtml
+++ b/TimeLogging/TimeLogging/Views/Home/Index.cshtml
@@ -25,4 +25,34 @@
     </table>
 
     <h2>Add New Time Log</h2>
+    
+    @*<form method="post">*@
+    @using (Html.BeginForm("SubmitTimeLog", "Home", null, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+    {
+        <fieldset>
+            @*<legend>Enter Time Log</legend>*@
+            <div>
+                <label for="StartTime">Start Time:</label>
+                <input type="datetime-local" name="StartTime" value="" />
+            </div>
+            <div>
+                <label for="EndTime">End Time:</label>
+                <input type="datetime-local" name="EndTime" value="" />
+            </div>
+            <div>
+                <label for="Billable">Billable:</label>
+                <input type="checkbox" name="Billable" value="" />
+            </div>
+            <div>
+                <label for="Comment">Comment:</label>
+                <input type="text" name="Comment" value="" />
+            </div>
+            <div>
+                <label>&nbsp;</label>
+                <input type="submit" value="Submit" class="submit" />
+            </div>
+        </fieldset>
+    }
+    @*</form>*@
+
 </div>
